web/book/tests/documentation/snapshots/documentation__book__reference__syntax__operators__regex-expressions__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from tracks\nfilter (name ~= \"Love\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  REGEXP(name, 'Love')

