web/book/tests/documentation/snapshots/documentation__book__reference__syntax__operators__regex-expressions__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.duckdb\n\nfrom artists\nfilter (name ~= \"Love.*You\")\n"
---
SELECT
  *
FROM
  artists
WHERE
  REGEXP_MATCHES(name, 'Love.*You')

