web/book/tests/documentation/snapshots/documentation__book__reference__syntax__operators__regex-expressions__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.bigquery\n\nfrom tracks\nfilter (name ~= \"\\\\bLove\\\\b\")\n"
snapshot_kind: text
---
SELECT
  *
FROM
  tracks
WHERE
  REGEXP_CONTAINS(name, '\bLove\b')
