web/book/tests/documentation/snapshots/documentation__book__reference__syntax__operators__regex-expressions__4.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.mysql\n\nfrom tracks\nfilter (name ~= \"With You\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  REGEXP_LIKE(name, 'With You', 'c')
