web/book/tests/documentation/snapshots/documentation__book__reference__syntax__operators__regex-expressions__5.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.sqlite\n\nfrom tracks\nfilter (name ~= \"But Why Isn't Your Syntax More Similar\\\\?\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  name REGEXP 'But Why Isn''t Your Syntax More Similar\?'

